--- a/src/components/mypage/sidemenu.css
+++ b/src/components/mypage/sidemenu.css
@@ -1,22 +1,26 @@
 .sideMenuBox {
   width: 300px;
   min-width: 220px;
-  background-color: #eee;
+  min-height: 400px;
   color: #555;
   padding: 30px 20px 30px 0;
-  margin-right: 20px;
+  margin-right: 60px;
+  box-shadow: 4px 0 4px -3px rgba(0, 0, 0, 0.2);
 }
 
 /* 사이드메뉴 큰메뉴 */
 .sideMenuBox .info em {
   color: #212529;
-  /* font-weight: 600; */
+  font-weight: 600;
   font-size: 22px;
   font-style: normal;
 }
 
+
+
+
 .sideMenuBox ul.info {
-  margin-bottom: 30px;
+  margin-bottom: 60px;
 }
 
 /* 사이드메뉴 작은메뉴 */
@@ -25,7 +29,17 @@
   color: #212529;
   font-size: 16px;
   text-indent: 30px;
-  margin-top: 5px;
+  margin-top: 13px;
+}
+
+.sideMenuBox ul.info li::before {
+  content:'';
+  display:inline-block;
+  width:8px;
+  height:1px;
+  margin:-5px 10px auto auto;
+  vertical-align:middle;
+  background:#212529;
 }
 
 .sideMenuBox ul.info li.here {
