--- a/src/components/academy/DetailPg.css
+++ b/src/components/academy/DetailPg.css
@@ -1,13 +1,12 @@
 .DetailPg-main {
   display: flex;
-  height: 100vh;
   width: 100%;
   align-items: center;
   flex-direction: column;
   row-gap: 20px;
   background-color: #70b592;
   padding-top: 100px;
-  height: 100%;
+  height: 1200px;
 }
 
 .DetailPg-title {
