--- a/src/components/academy/HrStore.css
+++ b/src/components/academy/HrStore.css
@@ -1,4 +1,5 @@
-ul,li {
+ul,
+li {
   list-style-type: none;
 }
 
@@ -8,8 +9,7 @@ ul,li {
   margin-bottom: 20px;
 }
 .btnBox li {
-  margin-right: 40px;
-
+  margin: 100px 40px;
 }
 .btnBox .btn {
   width: 200px;
@@ -30,10 +30,12 @@ ul,li {
 
 .btnBox .btn.on {
   color: #fff;
-  background-color: #03A65A;
+  background-color: #03a65a;
   font-weight: bold;
 }
-
+.hrBox {
+  overflow: hidden;
+}
 
 .hrItemList {
   display: flex;
@@ -45,15 +47,22 @@ ul,li {
   padding: 12px;
 }
 
-.hrItemList li a  {
+.hrItemList li a {
   display: block;
 }
 
 .hrItemList li a img {
-  width: 360px;
+  width: 200px;
+  height: 250px;
+  border-radius: 15px;
   margin-bottom: 5px;
+  margin-top: 30px;
 }
-
+.hrItemList li a img:hover {
+  transform: scale(1.2);
+  transition: transform 1s;
+  filter: brightness(70%);
+}
 .itemDesc {
   display: flex;
   flex-direction: column;
@@ -61,12 +70,34 @@ ul,li {
 }
 
 .itemDesc .item {
-  font-size: 17px;
+  font-size: 15px;
+  background-color: #ededed;
+  border-radius: 10px;
   font-weight: 500;
-  color : #333;
+  color: #333;
+  width: 90%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
 }
 
 .itemDesc .price {
   font-size: 15px;
-  color : #444;
+  margin-top: 10px;
+  color: #444;
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid gray;
+  border-radius: 10px;
+}
+.bottomBannerImg {
+  width: 100%;
+  margin: 100px 0;
+}
+.bottomBannerImg img {
+  width: 1450px;
+  height: 200px;
 }
