--- a/src/components/academy/Introduce/Introduce.css
+++ b/src/components/academy/Introduce/Introduce.css
@@ -29,6 +29,7 @@
   margin-top: 100px;
   background-color: #48845b;
   width: 100%;
+  opacity: 0.9;
   height: 700px;
   display: flex;
   align-items: center;
@@ -37,7 +38,7 @@
   margin: 100px 0;
   background-color: lightgray;
   width: 100%;
-  height: 600px;
+  height: 400px;
   position: relative;
   display: flex;
   align-items: center;
@@ -54,9 +55,22 @@
 }
 
 .IntroduceTxt {
-  font-size: 40px;
+  font-size: 25px;
   font-weight: 600;
   color: #fff;
   margin-left: 40px;
   line-height: 70px;
+}
+.Bottom-bannerImg3 img {
+  height: 100%;
+  width: 1500px;
+}
+
+.mainContents-info {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 100px;
+  width: 100%;
+  height: 100%;
 }
