--- a/src/components/academy/OrderPage.css
+++ b/src/components/academy/OrderPage.css
@@ -70,13 +70,23 @@
   font-weight: 700;
   font-size: 30px;
 }
-.orderPage-h3 {
-  width: 200px;
+.orderPage-bigTlte {
+  align-items: center;
+  display: flex;
+  width: 100%;
+  height: 150px;
+  background-color: #266f37;
+  opacity: 0.9;
+}
+.orderPage-h3 b {
+  color: #fff;
   height: 30px;
   font-size: 35px;
   margin-bottom: 30px;
+  margin-left: 30px;
 }
 .orderPage-span {
+  color: #fff;
   width: 1000px;
   height: 30px;
   font-size: 20px;
@@ -141,4 +151,19 @@
   height: 400px;
   background: #e8e8e8;
   border-radius: 20px;
+}
+
+.orderPgContents {
+  border-top: 2px solid gray;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 50px;
+  padding-top: 70px;
+}
+.orderPgContents img {
+  width: 80%;
+  height: 100%;
 }
