--- a/src/components/mypage/sidemenu.css
+++ b/src/components/mypage/sidemenu.css
@@ -57,6 +57,15 @@
   color: inherit;
 }
 
+/* PC Main CSS */
+@media screen and (min-width:768px) {
+
+}
+
+/* 모바일 Main CSS */
+@media screen and (max-width:767px) {
+  
+}
 
 
 
