--- a/src/components/Darkmode/Darkmode.css
+++ b/src/components/Darkmode/Darkmode.css
@@ -375,3 +375,10 @@ body.dark {
   transform: scale(0);
   transition: transform 0.8s;
 }
+
+@media screen and (max-width: 767px) {
+  .switch {
+    width: 80px;
+    height: 20px;
+  }
+}
