--- a/src/components/academy/OrderPage.css
+++ b/src/components/academy/OrderPage.css
@@ -1,169 +1,226 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  list-style: none;
-  font-family: Noto Sans KR;
-}
-.shareBtn {
-  display: flex;
-  justify-content: end;
-}
-.shareBtn button {
-  font-size: 12px;
-  width: 35px;
-  height: 35px;
-  border: none;
-  background-color: #e8e8e8;
-  border-radius: 20px;
-  font-weight: 500;
+@media screen and (min-width: 768px) {
+  .shareBtn {
+    display: flex;
+    justify-content: end;
+  }
+  .shareBtn button {
+    font-size: 12px;
+    width: 35px;
+    height: 35px;
+    border: none;
+    background-color: #e8e8e8;
+    border-radius: 20px;
+    font-weight: 500;
+  }
+
+  .orderPage-contents {
+    color: #484745;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-content: flex-start;
+    justify-content: space-around;
+  }
+  .orderPage-left {
+    width: 500px;
+  }
+  .orderPage-right {
+    margin-top: 50px;
+  }
+  .orderInfo.orderPage-h2,
+  .orderPage-p,
+  .orderPage-ul {
+    font-weight: 800;
+    display: flex;
+  }
+  .swiper-slide img {
+    border-radius: 12px;
+  }
+  .orderPage-p {
+    margin-top: 20px;
+    font-size: 25px;
+  }
+  .orderPage- {
+    margin: auto;
+  }
+  .orderPage-select {
+    width: 70px;
+    height: 20px;
+  }
+  .orderPage-input {
+    width: 300px;
+    height: 150px;
+    width: 300px;
+    height: 150px;
+    margin-bottom: 30px;
+    font-size: 15px;
+    border: 0;
+    border-radius: 15px;
+    outline: none;
+    padding-left: 10px;
+    background-color: rgb(233, 233, 233);
+  }
+  .orderPage-h2 {
+    font-weight: 700;
+    font-size: 30px;
+  }
+  .orderPage-bigTitle {
+    align-items: center;
+    display: flex;
+    width: 100%;
+    height: 150px;
+    background-color: #266f37;
+    opacity: 0.9;
+  }
+  .orderPage-h3 b {
+    color: #fff;
+    height: 30px;
+    font-size: 35px;
+    margin-bottom: 30px;
+    margin-left: 30px;
+  }
+  .orderPage-span {
+    color: #fff;
+    width: 1000px;
+    height: 30px;
+    font-size: 20px;
+  }
+
+  .orderPage-ul {
+    display: flex;
+  }
+  .orderPage-infoBtn {
+    font-size: 15px;
+    margin-top: 30px;
+    margin-bottom: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .orderPage-infoBtn button {
+    margin: 20px 12px;
+  }
+  .totalInfo dd {
+    margin-top: 10px;
+    width: 270px;
+    height: 30px;
+  }
+
+  .totalInfo {
+    width: 300px;
+    display: flex;
+    justify-content: flex-start;
+  }
+  .OrderPage-select {
+    width: 200px;
+  }
+  .plusMinusBtn {
+    width: 25px;
+    height: 25px;
+    background-color: #e8e8e8;
+    border: none;
+    border-radius: 5px;
+    margin: 10px 10px;
+    font-size: 14px;
+    font-weight: 900;
+  }
+  .alertMsg {
+    font-size: 14px;
+    margin-top: 20px;
+  }
+  .totalInfo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  /* 硫붿씤 諛곕꼫 */
+  .orderPage-swiper {
+    width: 50px;
+    height: 4px;
+    border-radius: 0;
+    background-color: rgba(255, 255, 255, 0.7);
+    margin-top: 40px;
+    width: 400px;
+    height: 400px;
+    background: #e8e8e8;
+    border-radius: 20px;
+  }
+
+  .orderPgContents {
+    border-top: 2px solid gray;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 50px;
+    padding-top: 70px;
+  }
+  .orderPgContents img {
+    width: 80%;
+    height: 100%;
+  }
 }
 
-.orderPage-contents {
-  color: #484745;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  align-content: flex-start;
-  justify-content: space-around;
-}
-.orderPage-left {
-  width: 500px;
-}
-.orderPage-right {
-  margin-top: 50px;
-}
-.orderInfo.orderPage-h2,
-.orderPage-p,
-.orderPage-ul {
-  font-weight: 800;
-  display: flex;
-}
-.swiper-slide img {
-  border-radius: 12px;
-}
-.orderPage-p {
-  margin-top: 20px;
-  font-size: 25px;
-}
-.orderPage- {
-  margin: auto;
-}
-.orderPage-select {
-  width: 70px;
-  height: 20px;
-}
-.orderPage-input {
-  width: 300px;
-  height: 150px;
-  width: 300px;
-  height: 150px;
-  margin-bottom: 30px;
-  font-size: 15px;
-  border: 0;
-  border-radius: 15px;
-  outline: none;
-  padding-left: 10px;
-  background-color: rgb(233, 233, 233);
-}
-.orderPage-h2 {
-  font-weight: 700;
-  font-size: 30px;
-}
-.orderPage-bigTlte {
-  align-items: center;
-  display: flex;
-  width: 100%;
-  height: 150px;
-  background-color: #266f37;
-  opacity: 0.9;
-}
-.orderPage-h3 b {
-  color: #fff;
-  height: 30px;
-  font-size: 35px;
-  margin-bottom: 30px;
-  margin-left: 30px;
-}
-.orderPage-span {
-  color: #fff;
-  width: 1000px;
-  height: 30px;
-  font-size: 20px;
-}
+@media screen and (max-width: 767px) {
+  .orderPage-contents {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0;
+  }
+  .orderPage-bigTitle {
+    width: 100%;
+    align-items: center;
+    display: flex;
+    height: 100px;
+    background-color: #266f37;
+    opacity: 0.9;
+  }
+  .orderPage-h3 {
+    width: 100%;
+  }
+  .orderPage-left {
+    width: 60%;
+  }
 
-.orderPage-ul {
-  display: flex;
-}
-.orderPage-infoBtn {
-  font-size: 15px;
-  margin-top: 30px;
-  margin-bottom: 50px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.orderPage-infoBtn button {
-  margin: 20px 12px;
-}
-.totalInfo dd {
-  margin-top: 10px;
-  width: 270px;
-  height: 30px;
-}
-
-.totalInfo {
-  width: 300px;
-  display: flex;
-  justify-content: flex-start;
-}
-.OrderPage-select {
-  width: 200px;
-}
-.plusMinusBtn {
-  width: 25px;
-  height: 25px;
-  background-color: #e8e8e8;
-  border: none;
-  border-radius: 5px;
-  margin: 10px 10px;
-  font-size: 14px;
-  font-weight: 900;
-}
-.alertMsg {
-  font-size: 14px;
-  margin-top: 20px;
-}
-.totalInfo {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-/* 硫붿씤 諛곕꼫 */
-.orderPage-swiper {
-  width: 50px;
-  height: 4px;
-  border-radius: 0;
-  background-color: rgba(255, 255, 255, 0.7);
-  margin-top: 40px;
-  width: 400px;
-  height: 400px;
-  background: #e8e8e8;
-  border-radius: 20px;
-}
-
-.orderPgContents {
-  border-top: 2px solid gray;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 50px;
-  padding-top: 70px;
-}
-.orderPgContents img {
-  width: 80%;
-  height: 100%;
+  .orderPage-infoBtn button {
+    width: 30px;
+    margin: 30px 25px;
+    margin-left: 70px;
+  }
+  .orderPgContents {
+    width: 70%;
+  }
+  .orderPgContents img {
+    width: 100%;
+    margin-bottom: 30px;
+  }
+  .orderPage-h3 b {
+    color: #fff;
+    height: 30px;
+    font-size: 35px;
+    margin-bottom: 30px;
+    margin-left: 30px;
+  }
+  .orderPage-span {
+    color: #fff;
+    width: 1000px;
+    height: 30px;
+    font-size: 20px;
+  }
+  .plusMinusBtn {
+    width: 25px;
+    height: 25px;
+    background-color: #e8e8e8;
+    border: none;
+    border-radius: 5px;
+    margin: 10px 10px;
+    font-size: 14px;
+    font-weight: 900;
+  }
 }
