--- a/src/components/academy/SendPages/SendPages.css
+++ b/src/components/academy/SendPages/SendPages.css
@@ -3,11 +3,11 @@
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .SendContents .boxContents {
@@ -23,11 +23,11 @@
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   margin: 100px 0;
 }
 
@@ -47,7 +47,7 @@
 .SendContents .textBox {
   width: 700px;
   -webkit-box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.1);
-          box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.1);
+  box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.1);
   border: 0;
   outline: 0;
 }
@@ -62,7 +62,7 @@
   margin-top: 40px;
   background-color: #ededed;
   -webkit-box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.1);
-          box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.1);
+  box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.1);
   margin-left: 35%;
   width: 200px;
   height: 40px;
@@ -72,3 +72,15 @@
   color: gray;
 }
 /*# sourceMappingURL=SendPages.css.map */
+@media screen and (max-width: 767px) {
+  .SendContents {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .SendContents .boxContents {
+    margin-right: 165px;
+  }
+}
