--- a/src/components/academy/TeacherInfo.css
+++ b/src/components/academy/TeacherInfo.css
@@ -1,5 +1,31 @@
 .teacher-list {
+  margin-top: 100px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+}
+
+.bottomBoxBanner {
+  width: 100%;
+  height: 200px;
+  margin: 40px 0;
+}
+.bottomBoxBanner img {
+  width: 100%;
+  height: 200px;
+}
+@media screen and (max-width: 767px) {
+  .teacher-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+  .Bottom-bannerImg3 img {
+    width: 100%;
+    height: 150px;
+  }
+  .iconBoxWrapper1,
+  .Bottom-bannerImg2 {
+    display: none;
+  }
 }
