--- a/src/components/academy/TeacherInfo_detail.css
+++ b/src/components/academy/TeacherInfo_detail.css
@@ -25,17 +25,24 @@
 } */
 
 .imgBox {
-  display: block;
-  width: 370px;
-  height: 250px;
-  background-color: rgba(111, 111, 111, 0.6);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 350px;
+  height: 300px;
+  background-color: #e3e3e3;
   margin-bottom: 13px;
   border-radius: 15px;
 }
+.TopBanner {
+  width: 100%;
+  height: 100%;
+}
 
 .t_img {
-  height: 250px;
-  width: auto;
+  padding: 10px 10px;
+  height: 100%;
+  width: 100%;
   object-fit: contain;
   position: relative;
   left: 50%;
@@ -138,4 +145,7 @@
 
 /* mobile */
 @media screen and (max-width: 767px) {
+  .t_infoContainer {
+    width: 50vh;
+  }
 }
