--- a/src/components/academy/TeacherInfo.css
+++ b/src/components/academy/TeacherInfo.css
@@ -16,6 +16,7 @@
 }
 @media screen and (max-width: 767px) {
   .teacher-list {
+    padding-left: 20px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
