--- a/src/components/common/common.css
+++ b/src/components/common/common.css
@@ -62,6 +62,7 @@ h1,h2,h3,h4,h5,h6 {
 /* 반응형 웹 - PC  */
 @media screen and (min-width:768px) {
   .wrapper{
+    position: relative;
     padding-top: 80px; 
   }
   .inner-box{
